--- a/danedobazy.html
+++ b/danedobazy.html
@@ -6,12 +6,18 @@
   <title>Dane do Bazy</title>
 </head>
 <body>
+	<h3> DODAWANIE PRACOWNIKA </h3>
 	<form action="insert.php" method="POST">
 	    <input type="text" name="imie">
 		<input type="number" name="dzial"></br>
 		<input type="number" name="zarobki"></br>
 		<input type="date" name="data_urodzenia"></br>
 		<input type="submit" value="dodaj pracownika">
+	</form>
+	<h3> USUWANIE PRACOWNIKA </h3>
+	<form action="delete.php" method="POST">
+   		<input type="number" name="id"></br>
+   		<input type="submit" value="Zapisz w zmiennej $_POST['id']">
 	</form>
 </body>
 </html>
