--- a/danedobazy.html
+++ b/danedobazy.html
@@ -16,8 +16,8 @@
 	</form>
 	<h3> USUWANIE PRACOWNIKA </h3>
 	<form action="delete.php" method="POST">
-   		<input type="number" name="id"></br>
-   		<input type="submit" value="Zapisz w zmiennej $_POST['id']">
+   		<input type="number" name="id_pracownicy"></br>
+   		<input type="submit" value="Zapisz w zmiennej $_POST['id_pracownicy']">
 	</form>
 </body>
 </html>
