--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <title>Joanna Dyl</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>FLEXBOX</h1>
+    <h1>FLEXBOX - Joanna Dyl</h1>
     <ul class="menu">
       <li class="header">
         <a class="item_link" href="http://">11111</a>
