--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <a href="https://dyljoanna.herokuapp.com">Strona Glowna </a>
     <h1>FLEXBOX - Joanna Dyl</h1>
     <ul class="menu">
       <li class="header">
