--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+      <div class="tytul">
     <a class="przycisk" href="https://dyljoanna.herokuapp.com">Strona Glowna </a>
     <h1>FLEXBOX - Joanna Dyl</h1>
+        </div>
     <ul class="menu">
       <li class="header">
         <a class="item_link" href="http://">11111</a>
