--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -14,21 +14,17 @@
         </div>
     <ul class="menu">
       <li class="header">
-        <a class="item_link" href="http://">11111</a>
+        <a class="item_link" href="http://">Link 1</a>
       </li>
       <li class="sidebar">
-        <a class="item.link" href="http://">11111</a>
+        <a class="item.link" href="http://">Link 2</a>
       </li>
       <li class="menu_item">
-        <a class="item.link" href="http://">11111</a>
+        <a class="item.link" href="http://">Link 3</a>
       </li>
       <li class="footer">
-        <a class="item.link" href="http://">11111</a>
+        <a class="item.link" href="http://">Link 4</a>
       </li>
     </ul>
-
-    <a class="menu2" href="">asdasdasdasd</a>
-    <a class="menu2" href="">asdasdasdasd</a>
-    <a class="menu2" href="">asdasdasdasd</a>
   </body>
 </html>
