--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -25,6 +25,6 @@
       <li class="footer">
         <a class="item.link" href="http://">Link 4</a>
       </li>
-    </ul>
+    </div>
   </body>
 </html>
