--- a/grid/index.html
+++ b/grid/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CSS Grid</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<html>
+<head>
+<link rel="stylesheet" href="/style.css">
+<title>Joanna Dyl</title>
+</head>
+<body>
     <div class="container">
-      <header>
-        <h1>Wrowadzenie do CSS Grid'a</h1>
-      </header>
-      <nav>
-        2
-      </nav>
+        <div class="tytul red">
+        <a href="https://github.com/AD-2018/sql-php-pierwsza_strona-dyljoanna02">Github</a>
+            <div class="imie">
+            <h1>Joanna Dyl</h1>
+            </div>
+        </div>
+        <div class="menu blue">
+        <a class="link" href="/grid1/index1.html">GRID1</a>
+        <a class="link" href="/grid2/index2.html">GRID2</a>
+        <a class="link" href="/grid3/index3.html">GRID3</a>
+        <a class="link" href="/grid4/index4.html">GRID4</a>
+        <a class="link" href="/grid5/index5.html">GRID5</a>
+        <a class="link" href="/grid6/index6.html">GRID6</a>
+        <a class="link" href="/grid7/index7.html">GRID7</a>
+        <a class="link" href="/grid8/index8.html">GRID8</a>
+        <a class="link" href="/grid9/index9.html">GRID9</a>
+        <a class="link" href="/grid10/index10.html">GRID10</a>
+        <a class="link" href="/grid11/index11.html">GRID11</a>
+        <a class="link" href="/grid12/index12.html">GRID12</a>
+        </div>
+      </div>
 
-      <main>
-        3
-      </main>
-      <aside>
-        5
- </aside>
-      <footer>
-        4
-      </footer>
-    </div>
-  </body>
-</html>
+
+
+    </body>
+    </html>
