--- a/grid/index.html
+++ b/grid/index.html
@@ -13,18 +13,18 @@
             </div>
         </div>
         <div class="menu blue">
-        <a class="link" href="/grid1/index1.html">GRID1</a>
-        <a class="link" href="/grid2/index2.html">GRID2</a>
-        <a class="link" href="/grid3/index3.html">GRID3</a>
-        <a class="link" href="/grid4/index4.html">GRID4</a>
-        <a class="link" href="/grid5/index5.html">GRID5</a>
-        <a class="link" href="/grid6/index6.html">GRID6</a>
-        <a class="link" href="/grid7/index7.html">GRID7</a>
-        <a class="link" href="/grid8/index8.html">GRID8</a>
-        <a class="link" href="/grid9/index9.html">GRID9</a>
-        <a class="link" href="/grid10/index10.html">GRID10</a>
-        <a class="link" href="/grid11/index11.html">GRID11</a>
-        <a class="link" href="/grid12/index12.html">GRID12</a>
+        <a class="link" href="grid1/index1.html">GRID1</a>
+        <a class="link" href="grid2/index2.html">GRID2</a>
+        <a class="link" href="grid3/index3.html">GRID3</a>
+        <a class="link" href="grid4/index4.html">GRID4</a>
+        <a class="link" href="grid5/index5.html">GRID5</a>
+        <a class="link" href="grid6/index6.html">GRID6</a>
+        <a class="link" href="grid7/index7.html">GRID7</a>
+        <a class="link" href="grid8/index8.html">GRID8</a>
+        <a class="link" href="grid9/index9.html">GRID9</a>
+        <a class="link" href="grid10/index10.html">GRID10</a>
+        <a class="link" href="grid11/index11.html">GRID11</a>
+        <a class="link" href="grid12/index12.html">GRID12</a>
         </div>
       </div>
 
