--- a/grid/index.html
+++ b/grid/index.html
@@ -15,18 +15,18 @@
         <div class="menu blue">
           <ul>
             <li><a class="link" href="https://dyljoanna.herokuapp.com">Strona Glowna </a></li>
-            <li><a class="link" href="../grid1/index1.php">GRID1</a></li>
-            <li><a class="link" href="../grid2/index2.php">GRID2</a></li>
-            <li><a class="link" href="../grid3/index3.php">GRID3</a></li>
-            <li><a class="link" href="../grid4/index4.php">GRID4</a></li>
-            <li><a class="link" href="../grid5/index5.php">GRID5</a></li>
-            <li><a class="link" href="../grid6/index6.php">GRID6</a></li>
-            <li><a class="link" href="../grid7/index7.php">GRID7</a></li>
-            <li><a class="link" href="../grid8/index8.php">GRID8</a></li>
-            <li><a class="link" href="../grid9/index9.php">GRID9</a></li>
-            <li><a class="link" href="../grid10/index10.php">GRID10</a></li>
-            <li><a class="link" href="../grid11/index11.php">GRID11</a></li>
-            <li><a class="link" href="../grid12/index12.php">GRID12</a></li>
+            <li><a class="link" href="grid1/index1.php">GRID1</a></li>
+            <li><a class="link" href="grid2/index2.php">GRID2</a></li>
+            <li><a class="link" href="grid3/index3.php">GRID3</a></li>
+            <li><a class="link" href="grid4/index4.php">GRID4</a></li>
+            <li><a class="link" href="grid5/index5.php">GRID5</a></li>
+            <li><a class="link" href="grid6/index6.php">GRID6</a></li>
+            <li><a class="link" href="grid7/index7.php">GRID7</a></li>
+            <li><a class="link" href="grid8/index8.php">GRID8</a></li>
+            <li><a class="link" href="grid9/index9.php">GRID9</a></li>
+            <li><a class="link" href="grid10/index10.php">GRID10</a></li>
+            <li><a class="link" href="grid11/index11.php">GRID11</a></li>
+            <li><a class="link" href="grid12/index12.php">GRID12</a></li>
         </ul>
         </div>
       </div>
