--- a/grid/index.html
+++ b/grid/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <div class="tytul red">
-        <a href="https://github.com/AD-2018/sql-php-pierwsza_strona-dyljoanna02">Github</a>
+        <a class="github" href="https://github.com/AD-2018/sql-php-pierwsza_strona-dyljoanna02">Github</a>
             <div class="imie">
             <h1>Joanna Dyl</h1>
             </div>
